Fix alignment in modal

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -485,9 +485,9 @@ div[contenteditable]:disabled,
 .modal-content {
   background-color: var(--theme-inputBg);
   border-color: var(--theme-borderColor);
-  align-items: center;
 }
 .modal-body {
+  align-self: center;
   width: fit-content;
 }
 
